--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -17,7 +17,7 @@ img {
 
 .navbar-brand {
   img {
-    max-width: 200px;
+    max-width: 140px;
     height: auto;
   }
 }
@@ -54,6 +54,7 @@ img {
 .layout-auth {
   background: $bg-dark;
   display: flex;
+  flex-direction: column;
   .container {
     padding-top: 1rem;
     padding-bottom: 1rem;
@@ -79,5 +80,21 @@ img {
   &__logo {
     max-width: 280px;
     margin: auto;
+  }
+}
+
+.navbar-profile .media-body {
+  position: relative;
+  h6 {
+    margin-bottom: 0;
+    padding: 0.25rem 0;
+  }
+  &:hover {
+    .dropdown-menu {
+      margin-top: -0.5rem;
+      right: 0;
+      width: 200px;
+      display: block;
+    }
   }
 }
