chat integration for multiple users

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -157,8 +157,13 @@ img {
   }
 }
 
+.str-chat-channel {
+  max-height: 550px;
+  height: 550px;
+}
+
 .rfu-file-upload-button {
   label {
-    margin-bottom: 0;
+    margin-bottom: 3px;
   }
 }
