--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -49,10 +49,12 @@ img {
 }
 
 .c-card {
-  margin-top: -30px;
   background: $card-bg;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.4);
-  min-height: 250px;
+  margin-top: 30px;
+  @include media-breakpoint-up(md) {
+    margin-top: -30px;
+  }
 }
 
 .layout-auth {
