--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -53,11 +53,14 @@ body {
 }
 
 .c-card {
-  background: $card-bg;
-  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.4);
+  // background: $card-bg;
   margin-top: 30px;
+  text-align: center;
   @include media-breakpoint-up(md) {
     margin-top: -30px;
+  }
+  img {
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.4);
   }
 }
 
