--- a/src/styles/components/_video-card.scss
+++ b/src/styles/components/_video-card.scss
@@ -68,4 +68,15 @@
       background: #fff;
     }
   }
+  &__overlay {
+    background: rgba(0, 0, 0, 0.7);
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
 }
