--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -11,6 +11,7 @@ $btn-padding-y: 0.75rem;
 $bg-dark: #1a1d29;
 $bg-dark-text-color: #fff;
 $bg-light: #f5f8fd;
+$bg-dark-access: #000000;
 $card-bg: #ebebeb;
 
 @import "~bootstrap/scss/bootstrap";
@@ -314,5 +315,33 @@ body {
 .s-video-single ~ .c-video-list {
   .c-video-list__title {
     margin-bottom: 25px;
+  }
+}
+
+.layout-access {
+  background: $bg-dark-access;
+  display: flex;
+  flex-direction: column;
+  .container {
+    padding-top: 1rem;
+    padding-bottom: 1rem;
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+  &__container {
+    max-width: 450px;
+    color: #fff;
+    .form {
+      max-width: 355px;
+      margin: auto;
+    }
+    h1 {
+      font-size: 28px;
+      font-weight: normal;
+      margin: 1.5rem 0;
+    }
   }
 }
