--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -8,10 +8,10 @@ $btn-padding-y: 0.75rem;
 
 @import url("https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700,900&display=swap");
 
-$bg-dark: #1a1d29;
+$bg-dark-auth: #1a1d29;
 $bg-dark-text-color: #fff;
 $bg-light: #f5f8fd;
-$bg-dark-access: #000000;
+$bg-dark: #000000;
 $card-bg: #ebebeb;
 
 @import "~bootstrap/scss/bootstrap";
@@ -71,7 +71,7 @@ body {
 }
 
 .layout-auth {
-  background: $bg-dark;
+  background: $bg-dark-auth;
   display: flex;
   flex-direction: column;
   .container {
@@ -319,7 +319,7 @@ body {
 }
 
 .layout-access {
-  background: $bg-dark-access;
+  background: $bg-dark;
   display: flex;
   flex-direction: column;
   .container {
