--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -354,3 +354,29 @@ body {
     border: 1px solid #426792;
   }
 }
+
+.menu-wrapper--inner {
+  max-width: 100%;
+}
+
+.menu-item {
+  margin: 5px 10px;
+  cursor: pointer;
+  border: none;
+}
+.menu-item-wrapper {
+  @media screen and (min-width: 768px) {
+    max-width: 33.33%;
+  }
+}
+.menu-item-wrapper.active {
+  border: 1px blue solid;
+}
+.menu-item.active {
+  border: 1px green solid;
+}
+
+.scroll-menu-arrow {
+  padding: 20px;
+  cursor: pointer;
+}
