--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -71,7 +71,7 @@ body {
 }
 
 .layout-auth {
-  background: $bg-dark-auth;
+  background: $bg-dark;
   display: flex;
   flex-direction: column;
   .container {
