--- a/src/styles/components/_video-card.scss
+++ b/src/styles/components/_video-card.scss
@@ -15,20 +15,20 @@
 }
 
 .c-video-list {
-  padding: 50px 0;
+  padding: 30px 0;
   &__title {
     font-weight: 700;
     font-size: 28px;
     line-height: 38px;
-    margin-bottom: 35px;
+    margin-bottom: 25px;
     @media (min-width: 768px) {
-      margin-bottom: 65px;
+      margin-bottom: 35px;
     }
   }
 }
 
 .c-video-card {
-  margin-bottom: 25px;
+  // margin-bottom: 25px;
   display: block;
   text-decoration: none;
   color: $bg-dark-text-color;
@@ -36,7 +36,7 @@
     position: relative;
   }
   @media (min-width: 768px) {
-    margin-bottom: 50px;
+    // margin-bottom: 50px;
   }
   &:hover {
     text-decoration: none;
