--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -26,7 +26,7 @@ img {
 body {
   background: $bg-dark;
   color: $bg-dark-text-color;
-  font-family: "Source+Sans+Pro", sans-serif;
+  font-family: "Source Sans Pro", sans-serif;
 }
 
 .navbar-brand {
@@ -123,6 +123,7 @@ body {
       margin-bottom: 0;
       padding: 0.25rem 0;
       font-size: 1rem;
+      font-weight: bold;
       white-space: nowrap;
       text-overflow: ellipsis;
       overflow: hidden;
@@ -360,7 +361,7 @@ body {
 }
 
 .menu-item {
-  margin: 5px 10px;
+  margin: 0 7.5px;
   cursor: pointer;
   border: none;
 }
@@ -368,15 +369,12 @@ body {
   @media screen and (min-width: 768px) {
     max-width: 33.33%;
   }
-}
-.menu-item-wrapper.active {
-  border: 1px blue solid;
-}
-.menu-item.active {
-  border: 1px green solid;
+  @media screen and (min-width: 768px) {
+    max-width: 25%;
+  }
 }
 
-.scroll-menu-arrow {
-  padding: 20px;
-  cursor: pointer;
+.horizontal-menu {
+  margin-left: -30px;
+  margin-right: -30px;
 }
