--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -60,6 +60,24 @@ body {
     color: rgba($bg-dark-text-color, 0.95);
   }
   color: rgba($bg-dark-text-color, 0.8);
+  .container {
+    position: relative;
+  }
+  &__overlay {
+    background: rgba(0, 0, 0, 0.7);
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  &__message {
+    font-weight: bold;
+    font-size: 18px;
+  }
 }
 
 .s-card {
@@ -463,4 +481,7 @@ body {
     left: 100%;
     margin-right: -15px;
   }
+}
+.jw-display-icon-container {
+  display: none !important;
 }
