--- a/src/styles/components/_video-card.scss
+++ b/src/styles/components/_video-card.scss
@@ -49,7 +49,10 @@
 }
 
 .c-video-list {
-  padding: 30px 0;
+  padding: 2.5vh 0 1vh;
+  &:first-of-type {
+    padding-top: 5vh;
+  }
   &__title {
     font-weight: 700;
     font-size: 28px;
