Change background sizing

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -69,7 +69,7 @@ body {
 }
 
 .layout-main {
-  background-position: center center;
+  background-position: top center;
   background-repeat: no-repeat;
   background-size: cover;
 }
