Fix fade and font size

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -325,7 +325,7 @@ body {
 
 .s-video-single ~ .c-video-list {
   .c-video-list__title {
-    margin-bottom: 25px;
+    margin-bottom: 35px;
   }
 }
 
@@ -412,12 +412,13 @@ body {
     position: absolute;
     width: 10000px;
     height: 100%;
-    background: rgba(0, 0, 0, 0.76);
+    background: linear-gradient(90deg, rgba(0,0,0,0) 0%, rgba(0,0,0,1) 100%);
     z-index: 1;
   }
   &:after {
     left: 100%;
     margin-left: -7.5px;
+    background: linear-gradient(90deg, rgba(0,0,0,1) 0%, rgba(0,0,0,0) 100%);
   }
   &:before {
     right: 100%;
