--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -410,15 +410,15 @@ body {
     content: "";
     top: 0;
     position: absolute;
-    width: 10000px;
+    width: 21vw;
     height: 100%;
-    background: linear-gradient(90deg, rgba(0,0,0,0) 0%, rgba(0,0,0,1) 100%);
+    background: linear-gradient(90deg, rgba(0,0,0,1) 36%, rgba(0,0,0,0.4) 92%, rgba(0,0,0,0) 100%);
     z-index: 1;
   }
   &:after {
     left: 100%;
     margin-left: -7.5px;
-    background: linear-gradient(90deg, rgba(0,0,0,1) 0%, rgba(0,0,0,0) 100%);
+    background: linear-gradient(90deg, rgba(0,0,0,0) 0%, rgba(0,0,0,0.4) 8%, rgba(0,0,0,1) 100%)
   }
   &:before {
     right: 100%;
@@ -447,11 +447,11 @@ body {
   }
 
   .arrow-next {
-    right: 100%;
+    right: 125%;
     margin-left: -15px;
   }
   .arrow-prev {
-    left: 100%;
+    left: 125%;
     margin-right: -15px;
   }
 }
