--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -72,6 +72,7 @@ body {
   background-position: top center;
   background-repeat: no-repeat;
   background-size: cover;
+  min-height: 100vh;
 }
 
 .layout-auth {
