Final adjustments for arrows

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -413,13 +413,13 @@ body {
     position: absolute;
     width: 21vw;
     height: 100%;
-    background: linear-gradient(90deg, rgba(0,0,0,1) 36%, rgba(0,0,0,0.4) 92%, rgba(0,0,0,0) 100%);
+    background: transparent;
     z-index: 1;
   }
   &:after {
     left: 100%;
     margin-left: -7.5px;
-    background: linear-gradient(90deg, rgba(0,0,0,0) 0%, rgba(0,0,0,0.4) 8%, rgba(0,0,0,1) 100%)
+    background: transparent;
   }
   &:before {
     right: 100%;
@@ -438,7 +438,7 @@ body {
   }
   .arrow-next,
   .arrow-prev {
-    top: 35%;
+    top: -50px;
     transform: translateY(-50%);
     position: absolute;
     cursor: pointer;
