TS-43, TS-44, TS-45

--- a/src/styles/components/_video-card.scss
+++ b/src/styles/components/_video-card.scss
@@ -46,6 +46,10 @@
   .container {
     position: relative;
   }
+  &__description {
+    margin-top: 2.5rem;
+    font-size: 1.25rem;
+  }
 }
 
 .c-video-list {
