--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -28,6 +28,7 @@ body {
   color: $bg-dark-text-color;
   font-family: "Source Sans Pro", sans-serif;
   overflow-x: hidden;
+  max-width: 100%;
 }
 
 .navbar-brand {
@@ -406,25 +407,25 @@ body {
   max-width: 100%;
   overflow: initial !important;
   position: relative;
-  &:after,
-  &:before {
-    content: "";
-    top: 0;
-    position: absolute;
-    width: 21vw;
-    height: 100%;
-    background: transparent;
-    z-index: 1;
-  }
-  &:after {
-    left: 100%;
-    margin-left: -7.5px;
-    background: transparent;
-  }
-  &:before {
-    right: 100%;
-    margin-right: -7.5px;
-  }
+  //   &:after,
+  //   &:before {
+  //     content: "";
+  //     top: 0;
+  //     position: absolute;
+  //     width: 21vw;
+  //     height: 100%;
+  //     background: transparent;
+  //     z-index: 1;
+  //   }
+  //   &:after {
+  //     left: 100%;
+  //     margin-left: -7.5px;
+  //     background: transparent;
+  //   }
+  //   &:before {
+  //     right: 100%;
+  //     margin-right: -7.5px;
+  //   }
 }
 
 .scroll-menu-arrow {
