--- a/src/styles/components/_video-card.scss
+++ b/src/styles/components/_video-card.scss
@@ -47,8 +47,9 @@
     position: relative;
   }
   &__description {
-    margin-top: 2.5rem;
+    margin-top: 1.5rem;
     font-size: 1.25rem;
+    margin-bottom: 2rem;
   }
 }
 
