--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -344,7 +344,8 @@ body {
   .container {
     padding-top: 1rem;
     padding-bottom: 1rem;
-    min-height: 100vh;
+    min-height: 90vh;
+    padding-bottom: 10vh;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -353,14 +354,36 @@ body {
   &__container {
     max-width: 450px;
     color: #fff;
+
+    @media screen and (max-width: 768px) {
+      max-width: 500px;
+    }
+
     .form {
       max-width: 355px;
       margin: auto;
+
+      @media screen and (max-width: 768px) {
+        max-width: 100%;
+      }
+
+      input[name=code] {
+        color: red;
+        font-weight: bold;
+        text-transform: uppercase;
+      }
+
     }
     h1 {
       font-size: 28px;
       font-weight: normal;
       margin: 1.5rem 0;
+
+      @media screen and (max-width: 768px) {
+        text-align: center;
+        font-size: 20px;
+      }
+
     }
   }
 }
