--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -86,6 +86,8 @@ body {
   background-position: center center;
   background-repeat: no-repeat;
   background-size: cover;
+  position: fixed;
+
   &__logo {
     text-align: center;
   }
@@ -341,6 +343,8 @@ body {
   background-position: center center;
   background-repeat: no-repeat;
   background-size: cover;
+  position: fixed;
+
   .container {
     padding-top: 1rem;
     padding-bottom: 1rem;
