bring back play button

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -457,3 +457,7 @@ body {
 .jw-display-icon-container {
   display: none !important;
 }
+
+.jw-icon.jw-button-color.jw-icon-playback {
+  display: flex !important;
+}
