--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -82,36 +82,28 @@ body {
 }
 
 .layout-main {
-
   &:before {
     content: "";
-    left:0;
-    top:0;
+    left: 0;
+    top: 0;
     height: 100vh;
     width: 100%;
-    position:fixed;
+    position: fixed;
     background-position: top center;
     background-repeat: no-repeat;
     background-size: cover;
     background-position: top center;
-    animation: fadeInBackground .6s ease-in-out  ;
+    animation: fadeInBackground 0.6s ease-in-out;
     z-index: -1;
-    background: url('http://cdn.mytribe.network.s3.amazonaws.com/images/cat_Video%20Player_BG.jpg')
-
-
+    background: url("http://cdn.mytribe.network.s3.amazonaws.com/images/cat_Video%20Player_BG.jpg");
   }
-
 
   min-height: 100vh;
   padding-bottom: 20vh;
 
-  height: 100%;   /* ges Hoehe der Seite -> weitere Hoehenangaben werden relativ hierzu ausgewertet */
-  overflow: hidden;   /*  hide scrollbars */
-  opacity: 1.0;
-
-
-
-
+  height: 100%; /* ges Hoehe der Seite -> weitere Hoehenangaben werden relativ hierzu ausgewertet */
+  overflow: hidden; /*  hide scrollbars */
+  opacity: 1;
 }
 
 .layout-auth {
@@ -121,7 +113,6 @@ body {
   background-position: center center;
   background-repeat: no-repeat;
   background-size: cover;
-
 
   &__logo {
     text-align: center;
@@ -435,7 +426,7 @@ body {
 
 .menu-wrapper--inner {
   max-width: 100%;
-  transition: transform 0.5s !important;
+  transition: transform 0.4s ease 0s;
 }
 
 .menu-item {
