--- a/src/styles/components/_video-card.scss
+++ b/src/styles/components/_video-card.scss
@@ -27,11 +27,17 @@
   }
   &__message {
     font-weight: bold;
-    font-size: 18px;
+    font-size: 14px;
+    @media (min-width: 768px) {
+      font-size: 18px;
+    }
   }
   &__icon {
-    margin: 0 auto 1.5rem;
+    margin: 0 auto 0.5rem;
     color: #fff;
+    @media (min-width: 768px) {
+      margin: 0 auto 1.5rem;
+    }
     &:hover {
       opacity: 0.5;
       cursor: pointer;
