Fix access screen background height

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -365,6 +365,7 @@ body {
 .layout-access {
   background: $bg-dark;
   display: flex;
+  min-height: 100vh;
   flex-direction: column;
   background-position: center center;
   background-repeat: no-repeat;
