--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -94,7 +94,7 @@ body {
     background-position: top center;
     animation: fadeInBackground 0.6s ease-in-out;
     z-index: -1;
-    background-image: url("http://cdn.mytribe.network.s3.amazonaws.com/images/cat_Video%20Player_BG.jpg");
+    background-image: url("https://cdn.tribesocial.io/images/cat_Video%20Player_BG.jpg");
   }
 
   min-height: 100vh;
