--- a/src/styles/components/_video-card.scss
+++ b/src/styles/components/_video-card.scss
@@ -1,3 +1,10 @@
+.c-chat {
+  padding: 35px 0;
+  @media (min-width: 768px) {
+    padding: 65px 0 30px;
+  }
+}
+
 .c-video {
   padding: 35px 0;
   color: rgba($bg-dark-text-color, 0.8);
