--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -82,6 +82,7 @@ body {
 }
 
 .layout-main {
+  position: relative;
   &:before {
     content: "";
     left: 0;
@@ -491,4 +492,32 @@ body {
     color: #fff;
     opacity: 0.8;
   }
+}
+
+.not-logged-chat {
+  color: #fff;
+  background: #212326;
+  border-radius: 10px;
+}
+
+.not-logged-video {
+  color: #fff;
+  background: #212326;
+  position: relative;
+  overflow: hidden;
+  padding-top: 56.25%;
+  > svg {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+  }
+}
+
+.footer-app-version {
+  text-align: center;
+  font-size: 0.75rem;
+  position: absolute;
+  bottom: 1rem;
+  width: 100%;
 }
